examples/test/testpolicy12555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12555
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key13: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value4
          key9: value6
          key5: value4
      podSelector:
        matchLabels:
          key46: value43
